feat: add find records
